tests/NormalTests/paczka1/small_fuzzy/38592920.err
Error in line 1: PkF A505 34,0
Error in line 11: 2jXp6 A581 93,7
